# xist

./: .gitignore  Dockerfile  dream.sh  pyproject.toml  vultr.py
configs/stable-diffusion/: v1-inference.yaml
scripts/: img2img.py  inpaint.py  txt2img.py
xist/: api.py
xist/models/: autoencoder.py
xist/models/diffusion/: classifier.py  ddim.py  ddpm.py  plms.py
xist/modules/: attention.py
xist/modules/diffusionmodules/: model.py  openaimodel.py  util.py
xist/modules/encoders/: modules.py
xist/modules/image_degradation/: __init__.py  bsrgan.py  bsrgan_light.py
xist/modules/losses/: __init__.py
