[tool.poetry]
name = "xist"
version = "0.1.0"
description = ""
authors = ["Nikhil Rao <nikhil@pynecone.io>"]

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.2.4"
transformers = "^4.21.3"
opencv-python = "^4.6.0"
omegaconf = "^2.2.3"
einops = "^0.4.1"
torchvision = "^0.13.1"
pytorch-lightning = "^1.7.5"
kornia = "^0.6.7"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
